feat (book): add api of bookItems
